--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     
     <div id="root"> 
-        <h1>Hello Jesee </h1>
+        
     </div>
-    <script type ="module" src = "./App.js"> </script>
+    <script type ="module" src = "./src/App.js"> </script>
 </body>
 </html>
